--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <header>
   <h1>Simply Favors PH 🧸</h1>
   <p>Party Favors | Souvenirs | Gifts 💕</p>
-  <img src="images/icons/fblogo.png" alt="fblogo"><a href="https://www.facebook.com/Simplyfavorsph">Simplyfavorsph</a>
+  <!-- <img class="fb_logo" src="images/icons/fblogo.png" alt="fblogo"> -->
+  <a href="https://www.facebook.com/Simplyfavorsph">Simplyfavorsph</a>
 
 </header>
 
@@ -23,7 +24,7 @@
   <div class="products">
 
     <div class="product">
-      <img src="wipes.jpg" alt="Keychain">
+      <img src="images/products/wipes.jpg" alt="Keychain">
       <h3> Wet Wipes</h3>
       <p>Handy, travel-ready, and perfect for any celebration ✨</p>
       <div class="price">$5</div>
@@ -31,14 +32,14 @@
     </div>
 
     <div class="product">
-      <img src="bear.jpg" alt="Magnet">
+      <img src="images/products/bear.jpg" alt="Magnet">
       <h3>Teddy Bears</h3>
       <p>A classic fridge favorite</p>
       <div class="price">$4</div>
       <button onclick="addToCart('City Magnet', 4)">Add to Cart</button>
     </div>
 
-    <div class="product">
+    <div class="products/product">
       <img src="https://images.unsplash.com/photo-1503602642458-232111445657" alt="T-shirt">
       <h3>Key Chains</h3>
       <p>Soft cotton with local charm</p>
